src/objects/Item__c.object
<CustomObject>
    <fields>
        <fullName>Associate_Base_Price__c</fullName>
        <label>Associate Base Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associate_Price__c</fullName>
        <label>Associate Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associate_Sale_Offer__c</fullName>
        <label>Associate Sale Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Sale_Price__c</fullName>
        <label>Associate Sale Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_Inventory__c</fullName>
        <label>Available Inventory</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backorder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if available quantity is less than zero</description>
        <label>Backorder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_ID__c</fullName>
        <label>Brand ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>CASE( Product_Suffix__c ,
&quot;0011&quot;,&quot;Puritan&apos;s Pride&quot;,
&quot;0070&quot;,&quot;Vitamin World&quot;,
&quot;0021&quot;,&quot;Perfectly Pure&quot;,
NULL)</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Number__c</fullName>
        <label>Bulk Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the product is coated.</description>
        <inlineHelpText>Check this box if the product is coated.</inlineHelpText>
        <label>Coated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cruelty_Free__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this product is &quot;Cruelty Free&quot;</description>
        <inlineHelpText>Check if this product is &quot;Cruelty Free&quot;</inlineHelpText>
        <label>Cruelty Free?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cube_Volume__c</fullName>
        <label>Cube Volume</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Usage__c</fullName>
        <label>Daily Usage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Short Product Description</description>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discontinued_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discontinued Item?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flavor__c</fullName>
        <label>Flavor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Product_Information__c</fullName>
        <label>General Item Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hazmat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this product contains hazardous material.</description>
        <inlineHelpText>If checked, this product contains hazardous material.</inlineHelpText>
        <label>Hazmat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Status__c</fullName>
        <description>1 = Active 
2 = Show Back Order Disclaimer – item can still be purchased but a warning appears 
3 = Disable Purchase – item still displays on the site but cannot be purchased 
4 = Disable Item – item is removed from the site</description>
        <label>Inventory Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the product is still active.</description>
        <inlineHelpText>Check this box if the product is still active.</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Type_ID__c</fullName>
        <label>Item Type ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_is_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Item is Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Kosher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if item is Kosher.</description>
        <inlineHelpText>Check this box if item is Kosher.</inlineHelpText>
        <label>Kosher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lab_Tested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the product has been lab tested.</description>
        <inlineHelpText>Check this box if the product has been lab tested.</inlineHelpText>
        <label>Lab Tested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label_Info__c</fullName>
        <label>Label Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Term_Back_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Long-Term Back Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oracle_MDM__c</fullName>
        <description>Oracle  MDM # for the Selected Product</description>
        <label>Oracle MDM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organic?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paraben_Free__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paraben Free?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Form__c</fullName>
        <label>Item Form</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Item ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_URL__c</fullName>
        <label>Item Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>IMAGE( Product_Image_URL__c ,  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Size_Amount__c</fullName>
        <label>Item Size Amount</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Size_Measure__c</fullName>
        <label>Item Size Measure</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Suffix__c</fullName>
        <description>0011 - PP 0070 VB</description>
        <label>Item Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_URL__c</fullName>
        <label>Item URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rapid_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rapid Release?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restrictions__c</fullName>
        <description>Stores product restrictions detail.</description>
        <label>Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sale_Offer__c</fullName>
        <label>Sale Offer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <label>Sale Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Show_bundle_in_U2P__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box should be checked if the bundle is active, and needs to be shown in the U2P carrol.</description>
        <inlineHelpText>This box should be checked if the bundle is active, and needs to be shown in the U2P carrol.</inlineHelpText>
        <label>Show bundle in U2P</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Substitute_Item_Number__c</fullName>
        <label>Substitute Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substitute_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Substitute Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Items Substituted For</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Substitute_Multiplier__c</fullName>
        <label>Substitute Multiplier</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <label>Tax Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Item?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Party_Order_Item_ID__c</fullName>
        <label>Third Party Order Item ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Release?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vegetarian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vegetarian?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>Active_Bundles</fullName>
        <columns>NAME</columns>
        <columns>Product_Number__c</columns>
        <columns>Brand__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Sale_Price__c</columns>
        <columns>Sale_Offer__c</columns>
        <columns>Is_Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Item_is_Bundle__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Bundles</label>
    </listViews>
    <listViews>
        <fullName>Active_Natures_Origin_Items</fullName>
        <columns>NAME</columns>
        <columns>Product_Number__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Sale_Price__c</columns>
        <columns>Sale_Offer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Product_Suffix__c</field>
            <operation>equals</operation>
            <value>0022</value>
        </filters>
        <label>Active Nature&apos;s Origin Items</label>
    </listViews>
    <listViews>
        <fullName>Active_Other_Items</fullName>
        <columns>NAME</columns>
        <columns>Product_Number__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Sale_Price__c</columns>
        <columns>Sale_Offer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Suffix__c</field>
            <operation>notEqual</operation>
            <value>0021</value>
        </filters>
        <filters>
            <field>Product_Suffix__c</field>
            <operation>notEqual</operation>
            <value>0011</value>
        </filters>
        <filters>
            <field>Product_Suffix__c</field>
            <operation>notEqual</operation>
            <value>0070</value>
        </filters>
        <label>Active Other Items</label>
    </listViews>
    <listViews>
        <fullName>Active_Perfectly_Pure_Items</fullName>
        <columns>NAME</columns>
        <columns>Product_Number__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Sale_Price__c</columns>
        <columns>Sale_Offer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Product_Suffix__c</field>
            <operation>equals</operation>
            <value>0021</value>
        </filters>
        <label>Active Perfectly Pure Items</label>
    </listViews>
    <listViews>
        <fullName>Active_Puritan_s_Pride_Items</fullName>
        <columns>NAME</columns>
        <columns>Product_Number__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Sale_Price__c</columns>
        <columns>Sale_Offer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Product_Suffix__c</field>
            <operation>equals</operation>
            <value>0011</value>
        </filters>
        <label>Active Puritan&apos;s Pride Items</label>
    </listViews>
    <listViews>
        <fullName>All_Perfectly_Pure_Items</fullName>
        <columns>NAME</columns>
        <columns>Product_Number__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Sale_Price__c</columns>
        <columns>Sale_Offer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Suffix__c</field>
            <operation>equals</operation>
            <value>0021</value>
        </filters>
        <label>All Perfectly Pure Items</label>
    </listViews>
    <listViews>
        <fullName>Vitamin_World_Items</fullName>
        <columns>NAME</columns>
        <columns>Product_Number__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Sale_Price__c</columns>
        <columns>Sale_Offer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Suffix__c</field>
            <operation>equals</operation>
            <value>0070</value>
        </filters>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Vitamin World Items</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>